# SDIZO-Projekt-1

./: Array.cpp  Array.h  BinarySearchTree.cpp  BinarySearchTree.h  CMakeLists.txt  DoublyLinkedList.cpp  DoublyLinkedList.h  ElementsDLL.cpp  ElementsDLL.h  Heap.cpp  Heap.h  Menu.cpp  RandomInputDataGenerator.cpp  RandomInputDataGenerator.h  Test.cpp  Test.h  Time.cpp  Time.h
